# bgfx-imgui-example

./: .gitattributes  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  build.bat  build.cmake  build.sh
libs/SDL3/include/SDL3/: SDL_main_impl.h
libs/bgfx.cmake/bgfx/include/bgfx/: defines.h
libs/imgui/backends/: imgui_impl_bgfx.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h
src/: imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  main.cpp  main.h  roboto_font.h
